Implement conversation event broadcasting: add leave conversation endpoint; broadcast events for conversation creation, updates, member additions/removals, and permissions changes